--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
 <html>
-    <head>
-        <title>Snake Game</title>
-        <style>
-            canvas{
-                display: block;
-                margin: 0 auto;
-            }
-        </style>
-    </head>
-    <canvas id="snake" width="608" height="608"></canvas>
-    <script src="snake.js"></script>
+
+<head>
+  <title>Snake</title>
+  <link href='assets/style.css' rel='stylesheet'>
+</head>
+
+<body>
+  <span id='logo'>SNAKE</span>
+  <div id="sidebar">
+    <table>
+      <tr>
+        <!-- <td><img src="assets/img/hati.png" alt="Lives" class="heart"></td> -->
+        <td>Lives</td>
+        <td><span id="lives">0</span></td>
+      </tr>
+      <tr>
+        <td>Level</td>
+        <td><span id="level">0</span></td>
+      </tr>
+      <tr>
+        <td>Score</td>
+        <td><span id="score">0</span></td>
+      </tr>
+    </table>
+
+    <div id='play_menu'>
+      <button
+        onclick="start();document.getElementById('play_menu').style.display='none';document.getElementById('mid_menu').style.display='block';">Start</button>
+    </div>
+    <div id="mid_menu">
+      <button id="pause_button"
+      onclick="document.getElementById('pause_button').style.display='none';document.getElementById('resume_button').style.display='inline';"
+      >
+        Pause
+      </button>
+      <button id="resume_button" style="display: none;"
+        onclick="document.getElementById('pause_button').style.display='inline';document.getElementById('resume_button').style.display='none';">
+        Resume
+      </button>
+      <button
+        onclick="restart();document.getElementById('play_menu').style.display='block';
+        document.getElementById('mid_menu').style.display='none';">
+        Restart
+      </button>
+    </div>
+    <table>
+      <tr>
+        <td><img src="assets/img/sound.png" alt="Lives" class="heart"></td>
+        <td><button>ON</button></td>
+        <td><button>OFF</button></td>
+      </tr>
+    </table>
+  </div>
+  <div class="main">
+    <canvas id="snake" width="400" height="400"></canvas>
+  </div>
+  <script src='assets/snake.js' type='text/javascript'></script>
+</body>
+
 </html>
