--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <head>
   <title>Snake</title>
-  <link href='assets/style.css' rel='stylesheet'>
+  <link href='/reset.css' rel='stylesheet'>
+  <link href='/master.css' rel='stylesheet'>
+  <link href='style.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -47,14 +49,15 @@
     <table>
       <tr>
         <td><img src="assets/img/sound.png" alt="Lives" class="heart"></td>
-        <td><button>ON</button></td>
-        <td><button>OFF</button></td>
+        <td><button id="sound_on" onclick="toggleSound();" style="display: none;">ON</button></td>
+        <td><button id="sound_off" onclick="toggleSound();">OFF</button></td>
       </tr>
     </table>
   </div>
   <div class="main">
     <canvas id="snake" width="400" height="400"></canvas>
   </div>
+  <audio id="gameAudio"></audio>
   <script src='assets/snake.js' type='text/javascript'></script>
 </body>
 
