--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 
 <head>
   <title>Snake</title>
-  <link href='/reset.css' rel='stylesheet'>
-  <link href='/master.css' rel='stylesheet'>
-  <link href='style.css' rel='stylesheet'>
+  <link href='assets/style.css' rel='stylesheet'>
 </head>
 
 <body>
