fix: heart will disappear after 4 seconds

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <div id="sidebar">
     <table>
       <tr>
+        <td>Speed</td>
+        <td><span id="speed">0</span></td>
+      </tr>
+      <tr>
         <!-- <td><img src="assets/img/hati.png" alt="Lives" class="heart"></td> -->
         <td>Lives</td>
         <td><span id="lives">3</span></td>
